<resources>
    <string name="app_name">Warranty Logger</string>
    <string name="enter_warranty_name_text">Enter Warranty Name</string>
    <string name="enter_expiration_date_text">Enter Expiration Date</string>
    <string name="take_picture_text">Take Picture</string>
    <string name="save_text">Save</string>
    <string name="warranty_list_fab_description_text">Add new warranty</string>
    <string name="expiration_date_shortened_label_text">EXP DATE</string>
    <string name="expiration_date_sort_asc_shortened_label_text">EXP DATE(↑)</string>
    <string name="expiration_date_sort_dsc_shortened_label_text">EXP DATE(↓)</string>
    <string name="warranty_name_shortened_label_text">NAME</string>
    <string name="warranty_name_sort_asc_shortened_label_text">NAME(↑)</string>
    <string name="warranty_name_sort_dsc_shortened_label_text">NAME(↓)</string>
    <string name="menu_item_edit_text">Edit</string>
    <string name="menu_item_delete_text">Delete</string>
    <string name="warranty_name_label_text">Warranty Name</string>
    <string name="expiration_date_label_text">Expiration Date</string>
    <string name="image_label_text">Image</string>
    <string name="warranty_name_error_text">Warranty name is required</string>
    <string name="duration_error_text">Duration is required</string>
    <string name="delete_message_text">Are you sure you want to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="add_warranty_title_text">Add Warranty</string>
    <string name="edit_warranty_title_text">Edit Warranty</string>
    <string name="delete_text">Delete</string>
    <string name="cancel_text">Cancel</string>
    <string name="no_image_set_text">No image set</string>
    <string name="image_of_warranty_text">Image of warranty</string>
    <string name="remaining_time_label_text">ACTIVE</string>
    <string name="remaining_time_long_label_text">Expire in:</string>
    <string name="empty" />
    <string name="no_data_text">Empty</string>
    <string name="search_text">Search</string>
    <string name="clear_search_text">Clear Search</string>
    <string name="channel_name">warranty_logger_channel</string>
    <string name="channel_description">warranty_expiration</string>
    <string name="warn_me_text">Warn Me</string>
    <string name="duration_helper_text">Before expiration date</string>
    <string name="remind_me_text">Remind me?</string>
    <string name="customize_text">Customize</string>
    <string name="duration_text">Duration</string>
    <string name="unit_text">Unit</string>
    <string name="apply_text">Apply</string>
    <string name="reset_text">Reset</string>
    <string name="no_information_text">No Information</string>
    <string name="created_at_label_text">Created At</string>
    <string name="modified_last_at_label_text">Modified Last At</string>
    <string name="purchase_date_label_text">Purchase Date</string>
    <string name="enter_purchase_date_text">Enter Purchase Date</string>
    <string name="purchase_expiration_date_error_text">Expiration date is required</string>
    <string name="note_label_text">Note</string>
    <string name="enter_warranty_note_text">Enter Warranty Note</string>
    <string name="helper_text">*Required</string>
    <string name="date_helper_text">*Set the expiration date, either by duration or by deadline. Required.</string>
    <string name="pick_image_text">Pick Image</string>
    <string name="btn_tg_duration_text">Duration</string>
    <string name="btn_tg_deadline_text">Deadline</string>
    <string name="backup_and_restore_text"><![CDATA[Backup & Restore]]></string>
    <string name="backup_text">Backup Data</string>
    <string name="restore_text">Restore data</string>
    <string name="no_backup_set_text">No backup set</string>
    <string name="restart_dialog_text">This action will overwrite all data and restart the application. Do you want to continue?</string>
    <string name="export_backup_text">Export Backup</string>
    <string name="import_backup_text">Import Backup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_lock_label_text">Enable Authentication</string>
    <string name="settings_security_category_text">Security</string>
    <string name="settings_text">Settings</string>
</resources>