<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/parent_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_add_warranty_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_warranty_name_text"
            app:startIconDrawable="@drawable/ic_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_et_add_warranty_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_add_expiration_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_expiration_date_text"
            app:startIconDrawable="@drawable/ic_date_picker">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/til_et_add_expiration_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_add_add_picture"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_image_text"
            app:icon="@drawable/ic_image" />

        <TextView
            android:id="@+id/tv_add_image_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            tools:text="image.jpg" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/div_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btn_add_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save_text" />
    </LinearLayout>
</ScrollView>