<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WarrantyListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:elevation="@dimen/cardview_default_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/cb_list_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingStart="8dp"
            android:paddingTop="16dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            android:visibility="invisible"
            app:buttonTint="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/tv_list_warranty_name_label"
            app:layout_constraintEnd_toStartOf="@+id/tv_list_warranty_name_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_list_warranty_name_label" />

        <TextView
            android:id="@+id/tv_list_warranty_name_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="sans-serif-black"
            android:gravity="start|center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/warranty_name_shortened_label_text"
            android:textColor="?attr/colorOnPrimary"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_list_expiration_date_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1.5"
            app:layout_constraintStart_toEndOf="@+id/cb_list_delete_all"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_list_expiration_date_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/expiration_date_sort_asc_shortened_label_text"
            android:textColor="?attr/colorOnPrimary"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_list_remaining_time_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/tv_list_warranty_name_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_list_remaining_time_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical|end"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/remaining_time_label_text"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/tv_list_expiration_date_label"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_warranty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_list"
        app:layout_constraintVertical_bias="1.0"
        tools:itemCount="32"
        tools:listitem="@layout/list_item_warranty">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tv_list_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/no_data_text"
        android:textAppearance="?attr/textAppearanceHeadline3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_label"
        app:layout_constraintVertical_bias="0.45" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/warranty_list_fab_description_text"
        android:focusable="true"
        android:src="@drawable/ic_add_warranty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>